--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -54,8 +54,8 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        os: [win, macos, linux, android]
-        arch: [aarch64, x86_64]
+        os: [win]
+        arch: [x86_64]
       fail-fast: false
 
     steps:
