--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -21,7 +21,7 @@ on:
 
 jobs:
   meta:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
